统一所有文字样式并添加问答演示功能
- 统一数值、前缀、单位的字体大小、粗细、颜色和基线对齐
- 新增 qa-demo.js 全局问答演示脚本，所有图表页复用
- 为所有图表页添加问答演示按钮和实际问答案例
- 优化基线对齐：使用 line-height: 1 和 vertical-align: baseline
- 移除内联样式，统一使用 CSS 类
- 19-indicator: 每个场景区块都有问答演示按钮
- 01-column 和 16-heatmap: 每个零部件都有问答入口

--- a/04-line/index.html
+++ b/04-line/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../common.css">
     <script src="../responsive-spec.js"></script>
     <script src="../unified-filter.js"></script>
+    <script src="../qa-demo.js"></script>
 </head>
 <body>
 
@@ -43,6 +44,7 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag blue">Basic Line</span>
+                <button type="button" class="btn-qa-demo" onclick="showQaDemo('月度销售额趋势怎么样？', '折线图展示各月销售额变化，可问「哪个月最高」「整体趋势是升是降」「某月是多少」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-line-basic', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
