--- a/06-pie/index.html
+++ b/06-pie/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../common.css">
     <script src="../responsive-spec.js"></script>
     <script src="../unified-filter.js"></script>
+    <script src="../qa-demo.js"></script>
 </head>
 <body>
 
@@ -43,6 +44,7 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag yellow">Basic Pie</span>
+                <button type="button" class="btn-qa-demo" onclick="showQaDemo('2024年Q4各渠道销售占比多少？', '饼图展示线上、线下、批发等渠道占比，例如线上约42%、线下约35%、批发约23%；可问「最大占比是哪个」「某渠道占多少」。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-pie', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
