--- a/09-bubble/index.html
+++ b/09-bubble/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../common.css">
     <script src="../responsive-spec.js"></script>
     <script src="../unified-filter.js"></script>
+    <script src="../qa-demo.js"></script>
 </head>
 <body>
 
@@ -42,6 +43,7 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag purple">Bubble</span>
+                <button type="button" class="btn-qa-demo" onclick="showQaDemo('气泡图怎么读？', '气泡图用 X/Y 与气泡大小表示三维，可问「最大的点是哪个」「某区域有哪些项」「规模与指标关系」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-bubble', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
