--- a/10-radar/index.html
+++ b/10-radar/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../common.css">
     <script src="../responsive-spec.js"></script>
     <script src="../unified-filter.js"></script>
+    <script src="../qa-demo.js"></script>
 </head>
 <body>
 
@@ -42,6 +43,7 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag red">Radar</span>
+                <button type="button" class="btn-qa-demo" onclick="showQaDemo('多维度能力对比如何？', '雷达图展示多个维度的得分与对比，可问「哪个维度最强」「各维度均衡吗」「某维度是多少」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-radar', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
