--- a/26-progress/index.html
+++ b/26-progress/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../common.css">
     <script src="../responsive-spec.js"></script>
     <script src="../unified-filter.js"></script>
+    <script src="../qa-demo.js"></script>
     <style>
         .progress-grid {
             display: grid;
@@ -187,6 +188,7 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag blue">Linear</span>
+                <button type="button" class="btn-qa-demo" onclick="showQaDemo('当前进度多少？', '进度条展示完成度，可问「完成百分比」「还差多少」「是否达标」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-linear', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
