--- a/03-bar/index.html
+++ b/03-bar/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../common.css">
     <script src="../responsive-spec.js"></script>
     <script src="../unified-filter.js"></script>
+    <script src="../qa-demo.js"></script>
     <style>
         /* 使用 common.css 中的统一样式 */
     </style>
@@ -46,6 +47,7 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag green">Basic Bar</span>
+                <button type="button" class="btn-qa-demo" onclick="showQaDemo('2024年产品销量排行怎么样？', '条形图展示 TOP8 产品销量，适合长名称对比；可问「销量最高的是哪个」「某产品排第几」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-bar', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
