--- a/07-histogram/index.html
+++ b/07-histogram/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../common.css">
     <script src="../responsive-spec.js"></script>
     <script src="../unified-filter.js"></script>
+    <script src="../qa-demo.js"></script>
 </head>
 <body>
 
@@ -42,6 +43,7 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag green">Histogram</span>
+                <button type="button" class="btn-qa-demo" onclick="showQaDemo('数据分布情况如何？', '直方图展示数值的分布区间与频数，可问「哪个区间最多」「分布是否集中」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-histogram', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
