--- a/08-scatter/index.html
+++ b/08-scatter/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../common.css">
     <script src="../responsive-spec.js"></script>
     <script src="../unified-filter.js"></script>
+    <script src="../qa-demo.js"></script>
 </head>
 <body>
 
@@ -42,6 +43,7 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag blue">Scatter</span>
+                <button type="button" class="btn-qa-demo" onclick="showQaDemo('两个指标的关系如何？', '散点图展示两维度的相关关系，可问「有没有相关性」「异常点在哪」「某点代表什么」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-scatter', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
