--- a/15-wordcloud/index.html
+++ b/15-wordcloud/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../common.css">
     <script src="../responsive-spec.js"></script>
     <script src="../unified-filter.js"></script>
+    <script src="../qa-demo.js"></script>
     <style>
         .chart-type-badge {
             display: inline-flex; align-items: center; gap: 8px;
@@ -51,6 +52,7 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag purple">WordCloud</span>
+                <button type="button" class="btn-qa-demo" onclick="showQaDemo('热词分布怎么样？', '词云图用字号表示词频，可问「出现最多的是哪些词」「某词排第几」「整体主题倾向」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-wordcloud', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
