--- a/17-map/index.html
+++ b/17-map/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../common.css">
     <script src="../responsive-spec.js"></script>
     <script src="../unified-filter.js"></script>
+    <script src="../qa-demo.js"></script>
     <style>
         .chart-type-badge {
             display: inline-flex; align-items: center; gap: 8px;
@@ -141,6 +142,7 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag blue">Choropleth Map</span>
+                <button type="button" class="btn-qa-demo" onclick="showQaDemo('各省数据怎么样？', '地图用颜色表示各省指标，可问「哪个省最高」「某省是多少」「区域对比」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-map', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
