--- a/20-ring/index.html
+++ b/20-ring/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../common.css">
     <script src="../responsive-spec.js"></script>
     <script src="../unified-filter.js"></script>
+    <script src="../qa-demo.js"></script>
     <style>
         .variant-grid { grid-template-columns: repeat(2, 1fr); }
         @media (max-width: 768px) { .variant-grid { grid-template-columns: 1fr; } }
@@ -94,6 +95,7 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag blue">Ring</span>
+                <button type="button" class="btn-qa-demo" onclick="showQaDemo('各分类占比多少？', '环图展示分类占比，可问「最大的是哪类」「某类占多少」「中心可显示合计或重点指标」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-basic', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
