--- a/21-waterfall/index.html
+++ b/21-waterfall/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../common.css">
     <script src="../responsive-spec.js"></script>
     <script src="../unified-filter.js"></script>
+    <script src="../qa-demo.js"></script>
 </head>
 <body>
 
@@ -44,6 +45,7 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag blue">Waterfall</span>
+                <button type="button" class="btn-qa-demo" onclick="showQaDemo('各环节对总额的贡献如何？', '瀑布图展示从起点到终点的增减构成，可问「增加最多的是哪项」「某环节贡献多少」「净变化是多少」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-basic', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
