--- a/25-sankey/index.html
+++ b/25-sankey/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../common.css">
     <script src="../responsive-spec.js"></script>
     <script src="../unified-filter.js"></script>
+    <script src="../qa-demo.js"></script>
 </head>
 <body>
 
@@ -44,6 +45,7 @@
             </div>
             <div class="header-right">
                 <span class="chart-tag blue">Sankey</span>
+                <button type="button" class="btn-qa-demo" onclick="showQaDemo('流向和占比如何？', '桑基图展示流量在节点间的分布，可问「从A到B有多少」「某节点流入流出」「主要路径」等。')">问答演示</button>
                 <button class="btn-view-code" onclick="toggleCode('code-basic', this)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
                     Code
