--- a/19-indicator/index.html
+++ b/19-indicator/index.html
@@ -42,7 +42,7 @@
             .indicator-grid { grid-template-columns: repeat(2, 1fr); gap: 8px; margin: 10px 0; padding: 0 10px; }
         }
 
-        /* 卡片统一：圆角6px、内边距12px（更小更紧凑）、阴影 0 1px 2px，无顶部横杠 */
+        /* 卡片统一：固定高度宽度、圆角6px、内边距12px、阴影 0 1px 2px，无顶部横杠 */
         .indicator-card {
             background: #fff;
             border-radius: 6px;
@@ -51,12 +51,17 @@
             border: 1px solid #F0F0F0;
             position: relative;
             overflow: hidden;
+            min-height: 90px;
+            height: 90px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
         .indicator-card:hover {
             box-shadow: 0 2px 8px rgba(0,0,0,0.08);
         }
         @media (max-width: 768px) {
-            .indicator-card { padding: 10px; border-radius: 6px; }
+            .indicator-card { padding: 10px; border-radius: 6px; min-height: 85px; height: 85px; }
         }
         .indicator-card .label {
             font-size: 11px;
@@ -325,6 +330,11 @@
         @media (max-width: 900px) { .scenario-row { grid-template-columns: 1fr; } .scenario-row.cols3 { grid-template-columns: 1fr; } }
         .scenario-block { margin-bottom: 24px; }
         .scenario-block .spec-title { margin-bottom: 8px; }
+        /* 确保 scenario-row 中的指标卡高度一致 */
+        .scenario-row .indicator-card {
+            min-height: 90px;
+            height: 90px;
+        }
 
         .kpi-group-row { display: grid; grid-template-columns: repeat(4, 1fr); gap: 16px; margin-top: 16px; }
         @media (max-width: 768px) { .kpi-group-row { grid-template-columns: repeat(2, 1fr); } }
