增大指标卡尺寸至参考大小
- 内边距：12px → 20px（移动端16px）
- 卡片高度：90px → 130px（移动端120px）
- 数值字体：20px → 28px（移动端24px）
- 标签字体：11px → 13px（移动端12px）
- 趋势字体：10px → 12px（移动端11px）
- 前缀/单位字体：12px → 14px（移动端13px）
- 卡片间距：10px → 16px（移动端12px）
- 圆角：6px → 8px
- 确保比紧凑样式更大更突出

--- a/19-indicator/index.html
+++ b/19-indicator/index.html
@@ -33,26 +33,26 @@
         .indicator-grid {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
-            margin: 12px 0;
+            gap: 16px;
+            margin: 16px 0;
             padding: 0 14px;
             box-sizing: border-box;
         }
         @media (max-width: 768px) {
-            .indicator-grid { grid-template-columns: repeat(2, 1fr); gap: 8px; margin: 10px 0; padding: 0 10px; }
+            .indicator-grid { grid-template-columns: repeat(2, 1fr); gap: 12px; margin: 12px 0; padding: 0 10px; }
         }
 
-        /* 卡片统一：固定高度宽度、圆角6px、内边距12px、阴影 0 1px 2px，无顶部横杠 */
+        /* 卡片统一：固定高度宽度、圆角8px、内边距20px（参考大小）、阴影 0 1px 2px，无顶部横杠 */
         .indicator-card {
             background: #fff;
-            border-radius: 6px;
-            padding: 12px;
+            border-radius: 8px;
+            padding: 20px;
             box-shadow: 0 1px 2px rgba(0,0,0,0.05);
             border: 1px solid #F0F0F0;
             position: relative;
             overflow: hidden;
-            min-height: 90px;
-            height: 90px;
+            min-height: 130px;
+            height: 130px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
@@ -61,35 +61,35 @@
             box-shadow: 0 2px 8px rgba(0,0,0,0.08);
         }
         @media (max-width: 768px) {
-            .indicator-card { padding: 10px; border-radius: 6px; min-height: 85px; height: 85px; }
+            .indicator-card { padding: 16px; border-radius: 8px; min-height: 120px; height: 120px; }
         }
         .indicator-card .label {
-            font-size: 11px;
+            font-size: 13px;
             color: #8C8C8C;
-            margin-bottom: 6px;
+            margin-bottom: 10px;
             font-weight: 400;
         }
-        /* 数值行统一：数字 20px/600，前缀与单位 12px/400，同字体同基线对齐 */
+        /* 数值行统一：数字 28px/600（参考大小更大），前缀与单位 14px/400，同字体同基线对齐 */
         .indicator-card .value {
             display: flex;
             align-items: baseline;
             flex-wrap: wrap;
             font-family: inherit;
-            font-size: 20px;
+            font-size: 28px;
             font-weight: 600;
             color: #262626;
             line-height: 1;
-            margin-bottom: 3px;
+            margin-bottom: 6px;
         }
         .indicator-card .value .value-num {
-            font-size: 20px;
+            font-size: 28px;
             font-weight: 600;
             color: inherit;
             line-height: 1;
         }
         .indicator-card .value .value-prefix,
         .indicator-card .value .suffix {
-            font-size: 12px;
+            font-size: 14px;
             font-weight: 400;
             color: #8C8C8C;
             margin-left: 2px;
@@ -98,17 +98,17 @@
         }
         .indicator-card .value .value-prefix { margin-left: 0; margin-right: 2px; }
         .indicator-card .trend {
-            margin-top: 4px;
-            font-size: 10px;
+            margin-top: 8px;
+            font-size: 12px;
             font-weight: 400;
         }
         @media (max-width: 768px) {
-            .indicator-card .value { font-size: 18px; }
-            .indicator-card .value .value-num { font-size: 18px; }
-            .indicator-card .label { font-size: 10px; }
-            .indicator-card .trend { font-size: 9px; }
+            .indicator-card .value { font-size: 24px; }
+            .indicator-card .value .value-num { font-size: 24px; }
+            .indicator-card .label { font-size: 12px; }
+            .indicator-card .trend { font-size: 11px; }
             .indicator-card .value .value-prefix,
-            .indicator-card .value .suffix { font-size: 11px; }
+            .indicator-card .value .suffix { font-size: 13px; }
         }
         .trend-up { color: #52C41A; }
         .trend-down { color: #FF4D4F; }
@@ -330,10 +330,16 @@
         @media (max-width: 900px) { .scenario-row { grid-template-columns: 1fr; } .scenario-row.cols3 { grid-template-columns: 1fr; } }
         .scenario-block { margin-bottom: 24px; }
         .scenario-block .spec-title { margin-bottom: 8px; }
-        /* 确保 scenario-row 中的指标卡高度一致 */
+        /* 确保 scenario-row 中的指标卡高度一致（参考大小） */
         .scenario-row .indicator-card {
-            min-height: 90px;
-            height: 90px;
+            min-height: 130px;
+            height: 130px;
+        }
+        @media (max-width: 768px) {
+            .scenario-row .indicator-card {
+                min-height: 120px;
+                height: 120px;
+            }
         }
 
         .kpi-group-row { display: grid; grid-template-columns: repeat(4, 1fr); gap: 16px; margin-top: 16px; }
